common: Only show the grid for y>=0
common: Moved the grid a little to the left (and the default parabola a little to the right) so the grid numbers will be to the left of the default tracks
common: Fixed: The speedometer would go into some strange behavior if the skater was left unreturned for a bit of time (the needle would just start spinning for no apparent reason).  This was caused by the skater falling off the edge of the world.
common: Limited the number of user-created tracks to be 4
Removed the "simulation is paused" message when paused (unnecessary remnant)
Made return skater button same color as restart skater button
# 2.08.13 (59889) Jan 4, 2012
Energy Skate Park Basics: Added a "restart skater" button
# 2.08.12 (59884) Jan 4, 2012
common: Converted sim speed slider to "normal" and "slow motion" radio buttons
common: Changed "Return Skater" button to be green instead of orange to distinguish from "Reset all" Button
Energy Skate Park Basics: Reduced the size of the "W" track and adjusted layout so it doesn't overlap the control panels
Energy Skate Park Basics: Moved the pre-set parabola to the left so it doesn't encroach on the control panel
Energy Skate Park Basics: Simsharing: fixed: sim speed slider needs a name, see #3201
Energy Skate Park Basics: Simsharing: added message when changing tracks with track button, see #3201
# 2.08.11 (59612) Dec 21, 2011
Fixed: There seems to be a bug with the Track Friction still - if you turn it on, then off, the friction continues to affect the skater.
Fixed: Latent (enabled) value for the friction slider should be set to halfway on reset
Reduced snap distance to 1/3 of the previous value
# 2.08.10 (59417) Dec 16, 2011
12/16/2011 common: Don't allow to drag through the floor if any (no floor in space when g=0)
# 2.08.09 (59415) Dec 16, 2011
12/16/2011 common: Grab onto a nearby track while dragging
# 2.08.08 (59163) Dec 8, 2011
12/8/2011 common: Improved performance for Energy Skate Park grid